一些小修改

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <h1>SweetSeek</h1>
-                <p class="tagline"></p>
+                <p class="tagline">Designed by FCN Lab</p>
             </div>
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">Home</a></li>
@@ -29,8 +29,26 @@
             <div class="about-header">
                 <div class="about-icon"></div>
                 <h1>About SweetSeek</h1>
-                <p class="subtitle"></p>
+                <p class="subtitle">AI-powered research Q&A system for food science</p>
             </div>
+
+            <section class="about-section">
+                <h2>Technology Stack</h2>
+                <div class="stats-grid">
+                    <div class="stat-card">
+                        <div class="stat-number" id="docCount">0</div>
+                        <div class="stat-label">Documents</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-number" id="chunkCount">0</div>
+                        <div class="stat-label">Text Chunks</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-number" id="convCount">0</div>
+                        <div class="stat-label">Conversations</div>
+                    </div>
+                </div>
+            </section>
 
             <section class="about-section">
                 <h2>How It Works</h2>
@@ -38,25 +56,25 @@
                     <div class="workflow-step">
                         <div class="step-number">1</div>
                         <h3>Document Processing</h3>
-                        <p></p>
+                        <p>Upload and parse research papers</p>
                     </div>
                     <div class="workflow-arrow">→</div>
                     <div class="workflow-step">
                         <div class="step-number">2</div>
                         <h3>Vectorization</h3>
-                        <p></p>
+                        <p>Convert text to embeddings</p>
                     </div>
                     <div class="workflow-arrow">→</div>
                     <div class="workflow-step">
                         <div class="step-number">3</div>
                         <h3>Retrieval</h3>
-                        <p></p>
+                        <p>Find relevant documents</p>
                     </div>
                     <div class="workflow-arrow">→</div>
                     <div class="workflow-step">
                         <div class="step-number">4</div>
                         <h3>Generation</h3>
-                        <p></p>
+                        <p>Generate AI-powered answers</p>
                     </div>
                 </div>
             </section>
