--- a/frontend/management.html
+++ b/frontend/management.html
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <h1>SweetSeek</h1>
-                <p class="tagline"></p>
+                <p class="tagline">Designed by FCN Lab</p>
             </div>
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">Home</a></li>
@@ -34,7 +34,7 @@
         <div id="loginSection" class="login-section">
             <div class="login-card">
                 <h2>Admin Login</h2>
-                <p></p>
+                <p>Enter password to manage documents</p>
                 <div class="login-form">
                     <input 
                         type="password" 
