--- a/frontend/search.html
+++ b/frontend/search.html
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <h1>SweetSeek</h1>
-                <p class="tagline"></p>
+                <p class="tagline">Designed by FCN Lab</p>
             </div>
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">Home</a></li>
@@ -27,7 +27,7 @@
     <div class="page-container">
         <div class="page-header">
             <h1>Literature Search</h1>
-            <p>Search through our knowledge base of sweetness-related research papers</p>
+            <p>Search through our knowledge base of food science research papers</p>
         </div>
 
         <!-- Search Bar -->
@@ -36,7 +36,7 @@
                 <input 
                     type="text" 
                     id="searchInput" 
-                    placeholder=""
+                    placeholder="Enter keywords to search..."
                     class="search-input"
                 >
                 <button id="searchBtn" class="btn-primary">
